Refactor #11 follow 관련 소스 분리 * follow관련 소스 user 컨트롤러, 서비스와 분리 * follow, unfollow 시 활성 유저인지 검증 * api docs 업데이트
