# api/openapi.yaml
@@ -62,11 +62,11 @@ paths:
                                 jwt:
                                     required: false
                                     type: string
-                                    example: "이미 있는 회원일 땐 jwt 반환"
+                                    example: "로그인일 때 jwt 반환"
                                 social_login_id:
                                     required: false
                                     type: int
-                                    example: "없는 회원일 땐 소셜로그인 데이터를 저장한 id 반환"
+                                    example: "회원가입일 때 소셜로그인 데이터를 저장한 id 반환"
             '401':
                 description: "accessToken 이 유효하지 않을 때"
                 content:
@@ -174,7 +174,7 @@ paths:
         tags:
             - user
         summary: 팔로우
-        description: body에 folloingId 받고, header 에 jwt 토큰 받는 API
+        description: body에 followingId 받고, header 에 jwt 토큰 받는 API
         parameters:
               - name: Authorization
                 in: header
@@ -191,18 +191,8 @@ paths:
                     schema:
                         type: object
                         properties:
-                            followingId:
+                            userId:
                                 type: integer
-                                example: 1
-        requestBody:
-            required: true
-            content:
-                application/json:
-                    schema:
-                        type: object
-                        properties:
-                            followingId:
-                                type: int
                                 example: 1
         responses:
             '200':
@@ -214,12 +204,42 @@ paths:
                             properties:
                                 message:
                                     type: string
-                                    example: "팔로우 성공"
+                                    example: "성공적으로 팔로우 하였습니다."
+            '403':
+                description: "본인을 팔로우하거나 존재하지 않는 유저를 팔로우하려고 할 때"
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                error:
+                                    type: string
+                                    example: "팔로우할 수 없는 유저입니다."
+            '409':
+                description: "이미 팔로우한 유저일 때"
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                error:
+                                    type: string
+                                    example: "이미 팔로우한 유저입니다."
+            '500':
+                description: "서버 에러"
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                error:
+                                    type: string
+                                    example: "팔로우 실패하였습니다."
   /user/unfollow:
     delete:
         tags:
             - user
-        summary: 팔로우
+        summary: 언팔로우
         description: body에 folloingId 받고, header 에 jwt 토큰 받는 API
         parameters:
             - in: header
@@ -237,7 +257,7 @@ paths:
                     schema:
                         type: object
                         properties:
-                            followingId:
+                            userId:
                                 type: int
                                 example: 1
         responses:
@@ -250,5 +270,82 @@ paths:
                             properties:
                                 message:
                                     type: string
-                                    example: "팔로우 성공"
-     
+                                    example: "성공적으로 언팔로우 하였습니다."
+            '403':
+                description: "본인을 언팔로우하거나 존재하지 않는 유저를 언팔로우하려고 할 때"
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                error:
+                                    type: string
+                                    example: "팔로우할 수 없는 유저입니다."
+            '409':
+                description: "팔로우하지 않은 유저일 떄"
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                error:
+                                    type: string
+                                    example: "팔로우하지 않은 유저입니다."
+            '500':
+                description: "서버 에러"
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                error:
+                                    type: string
+                                    example: "언팔로우에 실패하였습니다."
+  /user/following/{userId}:
+    get:
+        tags:
+        - user
+        summary: 팔로잉 목록
+        description: 팔로잉 목록
+        parameters:
+            - in: path
+              name: userId
+              description: 팔로잉 목록을 조회할 유저의 id
+              required: true
+              schema:
+                    type: integer
+              example: 1
+        responses:
+            '200':
+                description: 성공
+                content:
+                application/json:
+                    schema:
+                    type: object
+                    properties:
+                        message:
+                        type: string
+  /user/follower/{userId}:
+    get:
+        tags:
+        - user
+        summary: 팔로워 목록
+        description: 팔로워 목록
+        parameters:
+            - in: path
+              name: userId
+              description: 팔로워 목록을 조회할 유저의 id
+              required: true
+              schema:
+                    type: integer
+              example: 1
+        responses:
+            '200':
+                description: 성공
+                content:
+                application/json:
+                    schema:
+                    type: object
+                    properties:
+                        message:
+                        type: string
